{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 105,
  "lineage": "4412d95b-0bd8-73f9-b99d-ff01895d593e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-009df40cf086ec3de",
            "domain": "vpc",
            "id": "eipalloc-009df40cf086ec3de",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-220-5-171.compute-1.amazonaws.com",
            "public_ip": "3.220.5.171",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.my-internet-gateway",
            "aws_vpc.my-vpc-02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0259018e3ac484128",
            "domain": "vpc",
            "id": "eipalloc-0259018e3ac484128",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-213-88-175.compute-1.amazonaws.com",
            "public_ip": "3.213.88.175",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.my-internet-gateway",
            "aws_vpc.my-vpc-02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my-internet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:062000045886:internet-gateway/igw-01c55925b72e298b8",
            "id": "igw-01c55925b72e298b8",
            "owner_id": "062000045886",
            "tags": {
              "Name": "my-internet-gateway"
            },
            "tags_all": {
              "Name": "my-internet-gateway"
            },
            "vpc_id": "vpc-0922dcfaf8c75ea93"
          },
          "dependencies": [
            "aws_vpc.my-vpc-02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "poc-revamp-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:062000045886:loadbalancer/app/poc-accessment-elb/fc09e69ebea8338e",
            "arn_suffix": "app/poc-accessment-elb/fc09e69ebea8338e",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "poc-accessment-elb-1342395800.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:062000045886:loadbalancer/app/poc-accessment-elb/fc09e69ebea8338e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "poc-accessment-elb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-031d361ba787fa903"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0b2e80b8854a32532"
              },
              {
                "subnet_id": "subnet-0c162798e8f0bc8f3"
              }
            ],
            "subnets": [
              "subnet-0b2e80b8854a32532",
              "subnet-0c162798e8f0bc8f3"
            ],
            "vpc_id": "vpc-0922dcfaf8c75ea93",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.elb_security_group",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.my-vpc-02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "revamp_frontend_landing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:062000045886:listener/app/poc-accessment-elb/fc09e69ebea8338e/a62036da420dafc9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:062000045886:targetgroup/poc-load-balancer-Group/489cf742e03e8314",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:062000045886:listener/app/poc-accessment-elb/fc09e69ebea8338e/a62036da420dafc9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:062000045886:loadbalancer/app/poc-accessment-elb/fc09e69ebea8338e",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.poc-revamp-elb",
            "aws_lb_target_group.poc_revamp_ecs_containers",
            "aws_security_group.elb_security_group",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.my-vpc-02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "poc_revamp_ecs_containers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:062000045886:targetgroup/poc-load-balancer-Group/489cf742e03e8314",
            "arn_suffix": "targetgroup/poc-load-balancer-Group/489cf742e03e8314",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:062000045886:targetgroup/poc-load-balancer-Group/489cf742e03e8314",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "poc-load-balancer-Group",
            "port": 5678,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0922dcfaf8c75ea93"
          },
          "dependencies": [
            "aws_vpc.my-vpc-02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-009df40cf086ec3de",
            "association_id": "eipassoc-090cba3a0381c563c",
            "connectivity_type": "public",
            "id": "nat-0550add611e823156",
            "network_interface_id": "eni-051be2231a224e331",
            "private_ip": "10.0.1.92",
            "public_ip": "3.220.5.171",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b2e80b8854a32532"
          },
          "dependencies": [
            "aws_eip.nat_eip_1",
            "aws_internet_gateway.my-internet-gateway",
            "aws_subnet.public_subnet_1",
            "aws_vpc.my-vpc-02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0259018e3ac484128",
            "association_id": "eipassoc-0909408813e57ce39",
            "connectivity_type": "public",
            "id": "nat-077440a36e3429f4e",
            "network_interface_id": "eni-0d318f2d1dce38710",
            "private_ip": "10.0.2.247",
            "public_ip": "3.213.88.175",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c162798e8f0bc8f3"
          },
          "dependencies": [
            "aws_eip.nat_eip_2",
            "aws_internet_gateway.my-internet-gateway",
            "aws_subnet.public_subnet_2",
            "aws_vpc.my-vpc-02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:062000045886:route-table/rtb-0aa9f492ded9e96ff",
            "id": "rtb-0aa9f492ded9e96ff",
            "owner_id": "062000045886",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0550add611e823156",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public-Route-Table"
            },
            "tags_all": {
              "Name": "Public-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0922dcfaf8c75ea93"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip_1",
            "aws_internet_gateway.my-internet-gateway",
            "aws_nat_gateway.nat_gateway_1",
            "aws_subnet.public_subnet_1",
            "aws_vpc.my-vpc-02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:062000045886:route-table/rtb-0303b3f74df617ee0",
            "id": "rtb-0303b3f74df617ee0",
            "owner_id": "062000045886",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-077440a36e3429f4e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public-Route-Table"
            },
            "tags_all": {
              "Name": "Public-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0922dcfaf8c75ea93"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip_2",
            "aws_internet_gateway.my-internet-gateway",
            "aws_nat_gateway.nat_gateway_2",
            "aws_subnet.public_subnet_2",
            "aws_vpc.my-vpc-02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:062000045886:route-table/rtb-07fca6c5b7f5d1ea8",
            "id": "rtb-07fca6c5b7f5d1ea8",
            "owner_id": "062000045886",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01c55925b72e298b8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public-Route-Table"
            },
            "tags_all": {
              "Name": "Public-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0922dcfaf8c75ea93"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my-internet-gateway",
            "aws_vpc.my-vpc-02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c510a65b8e8110f8",
            "route_table_id": "rtb-0aa9f492ded9e96ff",
            "subnet_id": "subnet-0388256bc0b1d930f"
          },
          "dependencies": [
            "aws_eip.nat_eip_1",
            "aws_internet_gateway.my-internet-gateway",
            "aws_nat_gateway.nat_gateway_1",
            "aws_route_table.private_route_table_1",
            "aws_subnet.private_subnet_1",
            "aws_subnet.public_subnet_1",
            "aws_vpc.my-vpc-02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-074b2644caa2b253d",
            "route_table_id": "rtb-0303b3f74df617ee0",
            "subnet_id": "subnet-0296b4200ac9f183f"
          },
          "dependencies": [
            "aws_eip.nat_eip_2",
            "aws_internet_gateway.my-internet-gateway",
            "aws_nat_gateway.nat_gateway_2",
            "aws_route_table.private_route_table_2",
            "aws_subnet.private_subnet_2",
            "aws_subnet.public_subnet_2",
            "aws_vpc.my-vpc-02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-066d483c752623229",
            "route_table_id": "rtb-07fca6c5b7f5d1ea8",
            "subnet_id": "subnet-0b2e80b8854a32532"
          },
          "dependencies": [
            "aws_internet_gateway.my-internet-gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_1",
            "aws_vpc.my-vpc-02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-088acc9817ea98703",
            "route_table_id": "rtb-07fca6c5b7f5d1ea8",
            "subnet_id": "subnet-0c162798e8f0bc8f3"
          },
          "dependencies": [
            "aws_internet_gateway.my-internet-gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_2",
            "aws_vpc.my-vpc-02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:062000045886:security-group/sg-0c193fd76e3b5a1cd",
            "description": "Security group allowing ports 80",
            "egress": [],
            "id": "sg-0c193fd76e3b5a1cd",
            "ingress": [],
            "name": "POC-SG",
            "name_prefix": "",
            "owner_id": "062000045886",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0922dcfaf8c75ea93"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my-vpc-02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:062000045886:security-group/sg-031d361ba787fa903",
            "description": "Allow http inbound traffic from anywhere",
            "egress": [],
            "id": "sg-031d361ba787fa903",
            "ingress": [],
            "name": "application-load-balancer",
            "name_prefix": "",
            "owner_id": "062000045886",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0922dcfaf8c75ea93"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my-vpc-02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http_egress_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1551331884",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0c193fd76e3b5a1cd",
            "security_group_rule_id": "sgr-090ead67077e9d203",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ecs_security_group",
            "aws_vpc.my-vpc-02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http_ingress_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 5678,
            "id": "sgrule-3785152793",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c193fd76e3b5a1cd",
            "security_group_rule_id": "sgr-0de437765a419d736",
            "self": false,
            "source_security_group_id": "sg-031d361ba787fa903",
            "timeouts": null,
            "to_port": 5678,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ecs_security_group",
            "aws_security_group.elb_security_group",
            "aws_vpc.my-vpc-02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "elb_allow_http_egress_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1382168807",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-031d361ba787fa903",
            "security_group_rule_id": "sgr-0e7da8e36c5c7d1ac",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.elb_security_group",
            "aws_vpc.my-vpc-02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "elb_allow_http_ingress_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-4004884876",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-031d361ba787fa903",
            "security_group_rule_id": "sgr-06818613e6e7feb16",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.elb_security_group",
            "aws_vpc.my-vpc-02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:062000045886:subnet/subnet-0388256bc0b1d930f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0388256bc0b1d930f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "062000045886",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-Subnet-1"
            },
            "tags_all": {
              "Name": "Private-Subnet-1"
            },
            "vpc_id": "vpc-0922dcfaf8c75ea93"
          },
          "dependencies": [
            "aws_vpc.my-vpc-02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:062000045886:subnet/subnet-0296b4200ac9f183f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0296b4200ac9f183f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "062000045886",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-Subnet-2"
            },
            "tags_all": {
              "Name": "Private-Subnet-2"
            },
            "vpc_id": "vpc-0922dcfaf8c75ea93"
          },
          "dependencies": [
            "aws_vpc.my-vpc-02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:062000045886:subnet/subnet-0b2e80b8854a32532",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b2e80b8854a32532",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "062000045886",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-Subnet-1"
            },
            "tags_all": {
              "Name": "Public-Subnet-1"
            },
            "vpc_id": "vpc-0922dcfaf8c75ea93"
          },
          "dependencies": [
            "aws_vpc.my-vpc-02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:062000045886:subnet/subnet-0c162798e8f0bc8f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c162798e8f0bc8f3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "062000045886",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-Subnet-2"
            },
            "tags_all": {
              "Name": "Public-Subnet-2"
            },
            "vpc_id": "vpc-0922dcfaf8c75ea93"
          },
          "dependencies": [
            "aws_vpc.my-vpc-02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my-vpc-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:062000045886:vpc/vpc-0922dcfaf8c75ea93",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f34e54cd07031672",
            "default_route_table_id": "rtb-05e613e3a45329bf5",
            "default_security_group_id": "sg-06b93481ce230a47d",
            "dhcp_options_id": "dopt-01251af50c0a80dce",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0922dcfaf8c75ea93",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05e613e3a45329bf5",
            "owner_id": "062000045886",
            "tags": {
              "Name": "my-vpc-02"
            },
            "tags_all": {
              "Name": "my-vpc-02"
            }
          }
        }
      ]
    }
  ]
}